tests/error/09.desc
Compilation error - invalid assignment rule