tests/error/09.out
Parser: сompilation error - syntax error, unexpected _STRING_VAR near line 2
